<resources>
    <string name="app_name">PSB Navigator</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="landingText">Home Page</string>
    <string name="signup">Sign Up</string>
    <string name="forgot">Forgot Password?</string>
    <string name="register">Sign Up</string>
    <string name="Email">Email</string>
    <string name="Name">Name</string>
    <string name="newPassword">New Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="resetPassword">Reset</string>
    <string name="backToLogin">Back to Login</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="description">Description</string>
    <string name="event_page">Event Page</string>
    <string name="event_name">Name:</string>
    <string name="event_time">Time:</string>
    <string name="event_location">Location:</string>
    <string name="event_date">Date:</string>
    <string name="view_on_map">View on Map</string>
    <string name="add_to_queue">Add to Queue</string>
    <string name="close">Close</string>
    <string name="destination_queue">Destination Queue</string>
    <string name="remove">Remove</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="search">Search...</string>
    <string name="submit">Submit</string>
    <string name="home">home</string>
    <string name="refresh">refresh</string>
    <string name="penn_state_logo">Penn State Logo</string>
    <string name="event_image">Event image</string>
</resources>