<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/imageView"
        android:layout_marginTop="16dp"
        android:text="@string/Email" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewEmail"
        android:hint="@string/Email" />

    <TextView
        android:id="@+id/textViewUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/editTextEmail"
        android:layout_marginTop="16dp"
        android:text="@string/username" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewUsername"
        android:hint="@string/username" />

    <TextView
        android:id="@+id/textViewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/editTextUsername"
        android:layout_marginTop="16dp"
        android:text="@string/newPassword" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewPassword"
        android:hint="@string/newPassword"
        android:inputType="textPassword" />
    <!--app:passwordToggleEnabled="true"-->

    <TextView
        android:id="@+id/textViewConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/editTextPassword"
        android:layout_marginTop="16dp"
        android:text="@string/confirmPassword" />

    <EditText
        android:id="@+id/editTextConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewConfirmPassword"
        android:hint="@string/confirmPassword"
        android:inputType="textPassword" />
    <!--app:passwordToggleEnabled="true"-->

    <Button
        android:id="@+id/buttonReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextConfirmPassword"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal = "true"
        android:text="@string/resetPassword" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonReset"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal = "true"
        android:text="@string/backToLogin" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal = "true"
        app:srcCompat="@mipmap/ic_launcher_round"
        android:contentDescription="@string/penn_state_logo" />

</RelativeLayout>