<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <androidx.cardview.widget.CardView
        android:id="@+id/destCard"
        android:layout_width="295dp"
        android:layout_height="140dp"
        android:layout_margin="5dp"
        card_view:cardBackgroundColor="@color/matteRoyalBlue"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/event_name"
                    android:textColor="@color/white"
                    android:textSize="16sp" />


                <Button
                    android:id="@+id/removeButton"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/matteRed"
                    android:text="@string/remove" />
            </LinearLayout>
    </androidx.cardview.widget.CardView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="5dp">

        <Button
            android:id="@+id/upButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/up" />

        <Button
            android:id="@+id/downButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/upButton"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/down" />
    </RelativeLayout>
</LinearLayout>