<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/landingText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal= "true"
        android:gravity="center"
        android:layout_marginTop="60dp"
        android:text="Add Location"
        app:srcCompat="@mipmap/ic_launcher_round"/>

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/imageView"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/Name" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewName"
        android:hint="@string/Name" />

    <TextView
        android:id="@+id/textViewLatitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_below="@+id/landingText"
        android:layout_marginTop="16dp"
        android:text="@string/latitude" />

    <EditText
        android:id="@+id/editTextLatitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewName"
        android:hint="@string/latitude" />

    <TextView
        android:id="@+id/textViewLongitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_below="@id/editTextName"
        android:layout_marginTop="16dp"
        android:text="@string/longitude" />

    <EditText
        android:id="@+id/editTextLongitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewEmail"
        android:hint="@string/longitude" />

    <TextView
        android:id="@+id/textViewDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/imageView"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/description" />

    <EditText
        android:id="@+id/editTextDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewDesc"
        android:hint="@string/description" />

    <Button
        android:id="@+id/buttonAddLoc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextDesc"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:text="Add Location" />


</LinearLayout>