<!-- res/layout/event_details_popup.xml -->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <ImageView
        android:id="@+id/popupEventImage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/event_image" />

    <TextView
        android:id="@+id/popupEventName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_below="@id/popupEventImage"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/popupEventTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_below="@id/popupEventName"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/popupEventDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_below="@id/popupEventTime"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/popupEventLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_below="@id/popupEventDate"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/popupEventDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_below="@id/popupEventLocation"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"/>

    <LinearLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

<!--        <Button-->
<!--            android:id="@+id/popupViewOnMapButton"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_weight="1"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/view_on_map"-->
<!--            android:layout_marginEnd="8dp" />-->

        <Button
            android:id="@+id/popupAddToQueueButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/add_to_queue"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/popupCloseButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/close" />

    </LinearLayout>

</RelativeLayout>
